--- a/iqasweb/pom.xml
+++ b/iqasweb/pom.xml
@@ -28,8 +28,18 @@
   </properties>
   
   <dependencies>
-  
-  <!-- log4j 2 -->
+  <!-- 对excel的操作类 -->
+  <dependency>
+	<groupId>org.apache.poi</groupId>
+	<artifactId>poi-ooxml</artifactId>
+	<version>3.13</version>
+</dependency>
+ <!--  <dependency>
+	<groupId>org.apache.poi</groupId>
+	<artifactId>poi</artifactId>
+	<version>3.13</version>
+</dependency> -->
+  <!-- log4j2 的结构和实现 -->
     <dependency>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j-api</artifactId>
@@ -40,7 +50,7 @@
     <artifactId>log4j-core</artifactId>
     <version>2.4.1</version>
   </dependency>
-  
+  <!-- 对log4j的兼容 -->
     <dependency>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j-jcl</artifactId>
