王文辉：添加单词属性资源

--- a/iqasweb/src/main/resources/savepath.properties
+++ b/iqasweb/src/main/resources/savepath.properties
@@ -1,5 +1,5 @@
 #the dir of wordNet 
-jwsdir=D:/Soft/WordNet
+jwsdir=C:/Program Files (x86)/WordNet
 jwsversion=2.1
 
 #the relative path of resources related to words
