--- a/iqasweb/src/main/resources/savepath.properties
+++ b/iqasweb/src/main/resources/savepath.properties
@@ -1,5 +1,5 @@
 #the dir of wordNet 
-jwsdir=C:/Program Files (x86)/WordNet
+jwsdir=D:/Soft/WordNet
 jwsversion=2.1
 
 #the relative path of resources related to words
