--- a/iqasweb/.settings/org.eclipse.core.resources.prefs
+++ b/iqasweb/.settings/org.eclipse.core.resources.prefs
@@ -3,3 +3,4 @@ encoding//logs/mylog.log=gbk
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
 encoding//src/test/java=UTF-8
+encoding//src/test/resources=UTF-8
