--- a/iqasweb/src/main/resources/savepath.properties
+++ b/iqasweb/src/main/resources/savepath.properties
@@ -2,8 +2,16 @@
 jwsdir=D:/Soft/WordNet
 jwsversion=2.1
 
+#the relative path of log
+log=images/log.jpg
+
 #the relative path of resources related to words
 word.imagesavedir=upload/word/images
 word.videosavedir=upload/word/videos
 word.voicesavedir=upload/word/voices
 word.picturebooksavedir=upload/word/picturebooks
+
+
+#the relative path of commodity picture
+
+commodity.picturesavedir=upload/store/commodity/pictures
