--- a/iqasweb/pom.xml
+++ b/iqasweb/pom.xml
@@ -341,9 +341,27 @@
           <password>admin</password>
           <update>true</update>
         </configuration>
-      </plugin> 
+      </plugin>  
       
+<!-- <plugin>
 
+<groupId>org.codehaus.mojo</groupId>
+
+<artifactId>tomcat-maven-plugin</artifactId>
+
+<configuration>
+
+<url>http://localhost:8080/manager/html</url>
+
+<server>tomcat7-manager</server>
+
+<path>/iqasweb</path>
+
+</configuration>
+
+<version>1.1</version>
+
+</plugin> -->
        
      <!--  配置Web应用服务器，这里使用maven的web容器插件运行应用，使用clean jetty：run-exploded启动jetty容器, clean jetty：run启动（如果页面有变化会及时显示）
      如果想跳过运行测试代码可以使用clean jetty：run-exploded -Dmaven.test.skip=true ，或者配置maven-surefire-plugin的skip属性为true
