周亮：一：文件系统放置在项目外面 	1.将项目中的文件存放位置设置在项目外面了，并将项目文件存放的根目录文件名称命名为ifilesystem 	2.以后项目中所有文件都会存放在ifilesystem文件夹中，具体不同类型文件的存放位置在savepath.properties配置文件中设置。 	3.ifilesystem文件夹的存放位置由savepath.properties配置文件中fileSystemRoot后面内容指定。 	4.为了让文件能被tomcat服务器访问到，所以要配置ifilesystem文件在tomcat中，配置路径如下： 	<Context path="/iqasweb/ifilesystem" docBase="D:\Soft\autoiqasweb\ifilesystem" reloadable="true"></Context> 	其中docBase的内容是ifilesystem文件的实际存放位置，其由savepath.properties配置文件的fileSystemRoot值和ifilesystem值确定。 	path值后部分的ifilesystem值由savepath.properties配置文件ifilesystem值确定，前部分/iqasweb是为了保存和项目一样的访问路径。 	5.经过第4部配置后，iqasweb项目部署到tomcat中后，项目中如果有需要访问文件的地方就可以访问到了。

--- a/iqasweb/src/main/resources/savepath.properties
+++ b/iqasweb/src/main/resources/savepath.properties
@@ -2,16 +2,24 @@
 jwsdir=D:/Soft/WordNet
 jwsversion=2.1
 
+#the  root dir of the fileSystem of iqasweb project
+
+fileSystemRoot = D:/Soft/autoiqasweb/
+
+# root file of the fileSystem of iqasweb project
+ifilesystem=ifilesystem/
+
 #the relative path of log
 log=images/log.jpg
 
 #the relative path of resources related to words
-word.imagesavedir=upload/word/images
-word.videosavedir=upload/word/videos
-word.voicesavedir=upload/word/voices
-word.picturebooksavedir=upload/word/picturebooks
+word.imagesavedir=noumenon/wordresource/images
+word.videosavedir=noumenon/wordresource/videos
+word.voicesavedir=noumenon/wordresource/voices
+word.picturebooksavedir=noumenon/wordresource/picturebooks
 
 
-#the relative path of commodity picture
+#the relative path of first project commodity picture
+first.commodity.picturesavedir=first/store/commodity/pictures
 
-commodity.picturesavedir=upload/store/commodity/pictures
+
