--- a/iqasweb/.settings/org.eclipse.core.resources.prefs
+++ b/iqasweb/.settings/org.eclipse.core.resources.prefs
@@ -2,5 +2,7 @@ eclipse.preferences.version=1
 encoding//logs/mylog.log=gbk
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
+encoding//src/main/resources/jdbc.properties=UTF-8
 encoding//src/test/java=UTF-8
 encoding//src/test/resources=UTF-8
+encoding/<project>=UTF-8
