周亮：修复了删除单词资源BUG,            添加了好友模块，前台未测试，     ios端添加了根据主题查单词，根据单词id查图片、绘本。     mobileaaccesspath.txt文件中添加了移动端访问路径说明            下一步要加上缓存功能

--- a/iqasweb/src/main/resources/savepath.properties
+++ b/iqasweb/src/main/resources/savepath.properties
@@ -1,5 +1,5 @@
 #the dir of wordNet 
-jwsdir=C:/Program Files (x86)/WordNet
+jwsdir=D:/Soft/WordNet
 jwsversion=2.1
 
 #the  root dir of the fileSystem of iqasweb project
