--- a/iqasweb/pom.xml
+++ b/iqasweb/pom.xml
@@ -1,5 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+ 
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.cnu.iqas</groupId>
   <artifactId>iqasweb</artifactId>
@@ -7,7 +8,6 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>iqasweb Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  
   <properties>
     <springframework.version>3.2.13.RELEASE</springframework.version>
     <junit.version>4.10</junit.version>
@@ -25,9 +25,17 @@
     <javassist.version>3.9.0.GA</javassist.version>
      <hibernate-validator.version>4.0.2.GA</hibernate-validator.version>
      <json.version>2.4</json.version>
+     <jxl.version>2.6.12</jxl.version>
   </properties>
   
   <dependencies>
+  
+  <dependency>
+	<groupId>net.sourceforge.jexcelapi</groupId>
+	<artifactId>jxl</artifactId>
+	<version>${jxl.version}</version>
+  </dependency>
+
   <!-- 对excel的操作类 -->
   <dependency>
 	<groupId>org.apache.poi</groupId>
