周亮：1.ios增加了查询单词的功能     2.修复了查询本体单词一词多版本的问题

--- a/iqasweb/src/main/resources/savepath.properties
+++ b/iqasweb/src/main/resources/savepath.properties
@@ -23,3 +23,7 @@ word.picturebooksavedir=noumenon/wordresource/picturebooks
 first.commodity.picturesavedir=first/store/commodity/pictures
 
 
+
+#the relative path of ios project commodity picture
+ios.works.picturesavedir=ios/works/pictures
+
