周亮： 后台增加了单词主题模块： 功能包括：1.单个添加主题        2.从excel中导入主题        3.编辑主题        4.屏蔽/开启主题。        5.删除主题 ios端：增加了单词主题模块： 功能包括：1.查询根主题 	   2.根据父主题查询子主题 	   3.查询子主题下的单词 	   4.收集用户单词学习记录

--- a/iqasweb/src/main/resources/savepath.properties
+++ b/iqasweb/src/main/resources/savepath.properties
@@ -22,10 +22,11 @@ word.picturebooksavedir=noumenon/wordresource/picturebooks
 #the relative path of first project commodity picture
 first.commodity.picturesavedir=first/store/commodity/pictures
 #the relative path of first project user log picture
-first.user.logsavedir=first/users/logos
+first.user.logosavedir=first/users/logos
 
 
 #the relative path of ios project commodity picture
 ios.works.picturesavedir=ios/works/pictures
 #the relative path of ios user log picture
-ios.user.logsavedir=ios/users/logos
+ios.user.logosavedir=ios/users/logos
+ios.wordtheme.logosavedir=ios/wordthemes/logos
