周亮： ios: 1.完成了上传作品和下载作品功能. 2.修复了好友管理中的一些bug

--- a/iqasweb/src/main/resources/savepath.properties
+++ b/iqasweb/src/main/resources/savepath.properties
@@ -25,8 +25,14 @@ first.commodity.picturesavedir=first/store/commodity/pictures
 first.user.logosavedir=first/users/logos
 
 
-#the relative path of ios project commodity picture
+#the relative path of ios project commodity picture,video,voice
 ios.works.picturesavedir=ios/works/pictures
+ios.works.videosavedir=ios/works/videos
+ios.works.voicesavedir=ios/works/voices
+
+
+
 #the relative path of ios user log picture
 ios.user.logosavedir=ios/users/logos
+
 ios.wordtheme.logosavedir=ios/wordthemes/logos
