王文辉：1、本地添加了一个jar包，增加了自适应功能。      2、修改了测试模块的MPassController代码，增加了测试方法。

--- a/iqasweb/pom.xml
+++ b/iqasweb/pom.xml
@@ -283,6 +283,13 @@
 	            <artifactId>edu.mit.jwi_jdk</artifactId>
 	            <version>2.3.3</version>
 		</dependency>
+		
+		  <dependency>
+	            <groupId>local.Adaptive.Recommendation</groupId>
+	            <artifactId>Adaptive-Recommendation</artifactId>
+	            <version>1.9</version>
+		</dependency>
+		
 	<!-- fuseki数据库 -->
 	 <!-- dependency>
             <groupId>local.apache.jena.fuseki</groupId>
