--- a/iqasweb/pom.xml
+++ b/iqasweb/pom.xml
@@ -359,8 +359,8 @@
           <update>true</update>
         </configuration>
       </plugin>  
-      
-<!-- <plugin>
+    <!--   
+<plugin>
 
 <groupId>org.codehaus.mojo</groupId>
 
@@ -378,7 +378,7 @@
 
 <version>1.1</version>
 
-</plugin> -->
+</plugin>  -->
        
      <!--  配置Web应用服务器，这里使用maven的web容器插件运行应用，使用clean jetty：run-exploded启动jetty容器, clean jetty：run启动（如果页面有变化会及时显示）
      如果想跳过运行测试代码可以使用clean jetty：run-exploded -Dmaven.test.skip=true ，或者配置maven-surefire-plugin的skip属性为true
